--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="width=600" user-scalable="no" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Portfolio</title>
   </head>
   <body>
