--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
     />
     <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="width=600" user-scalable="no" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
   <body>
