--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Catbloom's Portfolio!</title>
   </head>
   <body>
     <div id="app"></div>
